ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;


// Tipos de dados

typedef BOOL (*AntesArquivoCallback) (void);


typedef PCHAR (*CryptCallback) (PCHAR value);


typedef void (*NoArgumentsCallback) (void);


typedef PCHAR (*OnGetChaveCallback) (void);


typedef void (*VerificarRecomporNumSerieCallback) (PCHAR NumSerie,double ValorGT,int *CRO,int *CNI);


typedef double (*VerificarRecomporValorGTCallback) (PCHAR NumSerie);

DllImport int AAC_IdentPaf_Empresa_GetContato(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetEmail(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetIE(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetIM(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_GetTelefone(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_SetContato(const INTPTR aacHandle, const PCHAR contato);

DllImport int AAC_IdentPaf_Empresa_SetEmail(const INTPTR aacHandle, const PCHAR email);

DllImport int AAC_IdentPaf_Empresa_SetIE(const INTPTR aacHandle, const PCHAR ie);

DllImport int AAC_IdentPaf_Empresa_SetIM(const INTPTR aacHandle, const PCHAR im);

DllImport int AAC_IdentPaf_Empresa_SetTelefone(const INTPTR aacHandle, const PCHAR telefone);

DllImport int AAC_SetOnAntesAbrirArquivo(const INTPTR aacHandle, const AntesArquivoCallback method);

DllImport int AAC_SetOnCrypt(const INTPTR aacHandle, const CryptCallback method);

DllImport int AAC_SetOnDeCrypt(const INTPTR aacHandle, const CryptCallback method);

DllImport int AAC_SetOnDepoisAbrirArquivo(const INTPTR aacHandle, const NoArgumentsCallback method);

DllImport int AAC_SetOnDepoisGravarArquivo(const INTPTR aacHandle, const NoArgumentsCallback method);