ACBrFramework/ACBrAACDll.pas


  try
     aacHandle^.AAC.IdentPAF.Empresa.Uf := Uf;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetTelefone(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.Telefone;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetTelefone(const aacHandle: PaacHandle; const Telefone : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.Telefone := Telefone;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetContato(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.Contato;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetContato(const aacHandle: PaacHandle; const Contato : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.Contato := Contato;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetEmail(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.Email;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetEmail(const aacHandle: PaacHandle; const Email : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.Email := Email;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetIE(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.IE;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetIE(const aacHandle: PaacHandle; const IE : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.IE := IE;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_GetIM(const aacHandle: PaacHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := aacHandle^.AAC.IdentPAF.Empresa.IM;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_IdentPaf_Empresa_SetIM(const aacHandle: PaacHandle; const IM : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     aacHandle^.AAC.IdentPAF.Empresa.IM := IM;
     Result := 0;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

{%endregion}

{%region EventHandlers}

procedure TEventHandlers.OnAntesAbrirArquivo(var Continua : Boolean);
begin
  Continua :=  OnAntesAbrirArquivoCallback();
end;

procedure TEventHandlers.OnAntesGravarArquivo(var Continua : Boolean);
begin
  Continua :=  OnAntesGravarArquivoCallback();
end;

procedure TEventHandlers.OnCrypt(ConteudoArquivo: AnsiString; var Resposta: AnsiString);
begin
  Resposta :=  OnCryptCallback(pChar(ConteudoArquivo));
end;

procedure TEventHandlers.OnDeCrypt(ConteudoCriptografado: AnsiString; var Resposta: AnsiString);
begin
  Resposta :=  OnCryptCallback(pChar(ConteudoCriptografado));
end;

procedure TEventHandlers.OnDepoisAbrirArquivo(Sender : TObject);
begin
  OnDepoisAbrirArquivoCallback();
end;

procedure TEventHandlers.OnDepoisGravarArquivo(Sender : TObject);
begin
  OnDepoisGravarArquivoCallback();
end;

procedure TEventHandlers.OnGetChave(var Chave: AnsiString);
begin
  if (Length(ChaveCriptografia) > 0) then
   Chave :=  ChaveCriptografia
  else
    Chave:= OnGetChaveCallback();
end;

procedure TEventHandlers.VerificarRecomporNumSerie(const NumSerie: String; const ValorGT: Double; var CRO: Integer; var CNI: Integer);
var
  retCRO, retCNI : Integer;
begin
  VerificarRecomporNumSerieCallback(pChar(NumSerie), ValorGT, retCRO, retCNI);
  CRO := retCRO;
  CNI := retCNI;
end;

procedure TEventHandlers.VerificarRecomporValorGT(const NumSerie: String; var ValorGT: Double);
begin
  ValorGT := VerificarRecomporValorGTCallback(pChar(NumSerie));
end;

{%endregion}

{%region Set Eventos}

Function AAC_SetOnAntesAbrirArquivo(const aacHandle: PAACHandle; const method : TAntesArquivoCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if Assigned(method) then
     begin
     aacHandle^.AAC.OnAntesAbrirArquivo := aacHandle^.EventHandlers.OnAntesAbrirArquivo;
     aacHandle^.EventHandlers.OnAntesAbrirArquivoCallback := method;
     Result := 0;
     end
     else
     begin
        aacHandle^.AAC.OnAntesAbrirArquivo := nil;
        aacHandle^.EventHandlers.OnAntesAbrirArquivoCallback := nil;
        Result := 0;
     end;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetOnAntesGravarArquivo(const aacHandle: PAACHandle; const method : TAntesArquivoCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if Assigned(method) then
     begin
     aacHandle^.AAC.OnAntesGravarArquivo := aacHandle^.EventHandlers.OnAntesGravarArquivo;
     aacHandle^.EventHandlers.OnAntesGravarArquivoCallback := method;
     Result := 0;
     end
     else
     begin
        aacHandle^.AAC.OnAntesGravarArquivo := nil;
        aacHandle^.EventHandlers.OnAntesGravarArquivoCallback := nil;
        Result := 0;
     end;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetOnCrypt(const aacHandle: PAACHandle; const method : TCryptCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if Assigned(method) then
     begin
     aacHandle^.AAC.OnCrypt := aacHandle^.EventHandlers.OnCrypt;
     aacHandle^.EventHandlers.OnCryptCallback := method;
     Result := 0;
     end
     else
     begin
        aacHandle^.AAC.OnCrypt := nil;
        aacHandle^.EventHandlers.OnCryptCallback := nil;
        Result := 0;
     end;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetOnDeCrypt(const aacHandle: PAACHandle; const method : TCryptCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if Assigned(method) then
     begin
     aacHandle^.AAC.OnDeCrypt := aacHandle^.EventHandlers.OnDeCrypt;
     aacHandle^.EventHandlers.OnDeCryptCallback := method;
     Result := 0;
     end
     else
     begin
        aacHandle^.AAC.OnDeCrypt := nil;
        aacHandle^.EventHandlers.OnDeCryptCallback := nil;
        Result := 0;
     end;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetOnDepoisAbrirArquivo(const aacHandle: PAACHandle; const method : TNoArgumentsCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     if Assigned(method) then
     begin
     aacHandle^.AAC.OnDepoisAbrirArquivo := aacHandle^.EventHandlers.OnDepoisAbrirArquivo;
     aacHandle^.EventHandlers.OnDepoisAbrirArquivoCallback := method;
     Result := 0;
     end
     else
     begin
        aacHandle^.AAC.OnDepoisAbrirArquivo := nil;
        aacHandle^.EventHandlers.OnDepoisAbrirArquivoCallback := nil;
        Result := 0;
     end;
  except
     on exception : Exception do
     begin
        aacHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function AAC_SetOnDepoisGravarArquivo(const aacHandle: PAACHandle; const method : TNoArgumentsCallback) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (aacHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;
